# hangman

./: .gitignore  AGENTS.md  README.md  run-local.sh
api/: .gitignore  API_SUMMARY.md  README.md  download_nltk_data.py  local_server.py  openapi.yaml  pyproject.toml  show_response.py  test_local.py
api/lambda/: handler.py  pyproject.toml  requirements.txt
api/tests/: conftest.py  test_handler.py
frontend/: .env  README.md  index.html
frontend/src/: App.css  App.tsx  api.ts  index.css  licenseText.ts  types.ts
frontend/src/components/: GameSettings.tsx  Keyboard.tsx  LicenseModal.tsx  PersonFigure.tsx  SpiderFigure.tsx  WordDisplay.tsx
frontend/src/styles/: LicenseModal.css
terraform/: .gitignore  api_gateway.tf  backend.tf  cloudwatch.tf  frontend.tf  lambda.tf  outputs.tf  variables.tf
