[project]
name = "hangman-word-generator"
version = "0.1.0"
description = "Lambda function for generating hangman words using NLTK"
requires-python = ">=3.11"
dependencies = ["nltk>=3.8.1", "better-profanity>=0.7.0"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "pyyaml>=6.0.0",
]
